--- a/presell/index.html
+++ b/presell/index.html
@@ -18,6 +18,12 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
   async
   defer
 ></script>
+	<script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  data-utmify-prevent-subids
+  async
+  defer
+></script>
 <style id="wp-emoji-styles-inline-css">
 
 	img.wp-smiley, img.emoji {
