--- a/quizphg/index.html
+++ b/quizphg/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="pt-BR"><head>
 	<meta charset="UTF-8">
-			<title>quizphg  Artifinsider</title>
+			<title>PHG</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-image-preview:large">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
@@ -124,7 +124,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-0fcf20f elementor-align-justify elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="0fcf20f" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">México 🇲🇽</span>
 					</span>
@@ -135,7 +135,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-648c9d8 elementor-align-justify elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="648c9d8" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Estados Unidos 🇺🇸  </span>
 					</span>
@@ -146,7 +146,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-272afc2 elementor-align-justify elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="272afc2" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Chile 🇨🇱</span>
 					</span>
@@ -157,7 +157,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-0d5a07f elementor-align-justify elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="0d5a07f" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Argentina 🇦🇷</span>
 					</span>
@@ -170,7 +170,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-17c3a70 elementor-align-justify elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="17c3a70" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Uruguay 🇺🇾</span>
 					</span>
@@ -181,7 +181,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-5817fdd elementor-align-justify elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="5817fdd" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">España 🇪🇸</span>
 					</span>
@@ -192,7 +192,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-04dff3f elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-align-justify elementor-widget elementor-widget-button" data-id="04dff3f" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Colombia 🇨🇴</span>
 					</span>
@@ -203,7 +203,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-c5251a7 elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-align-justify elementor-widget elementor-widget-button" data-id="c5251a7" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Otro País 🌏</span>
 					</span>
@@ -242,7 +242,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-46f0b50 elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="46f0b50" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">México 🇲🇽</span>
 					</span>
@@ -253,7 +253,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-4425ab4 elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="4425ab4" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Uruguay 🇺🇾</span>
 					</span>
@@ -264,7 +264,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-a3d1c34 elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="a3d1c34" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Estados Unidos 🇺🇸  </span>
 					</span>
@@ -275,7 +275,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-4035194 elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="4035194" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">España 🇪🇸</span>
 					</span>
@@ -286,7 +286,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-0c6e2dd elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="0c6e2dd" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Chile 🇨🇱</span>
 					</span>
@@ -297,7 +297,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-5ac83c2 elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="5ac83c2" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Colombia 🇨🇴</span>
 					</span>
@@ -308,7 +308,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-6dc8387 elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="6dc8387" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Argentina 🇦🇷</span>
 					</span>
@@ -319,7 +319,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				<div class="elementor-element elementor-element-69e904b elementor-mobile-align-justify elementor-widget-mobile__width-inherit elementor-widget elementor-widget-button" data-id="69e904b" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://twsprayerabundance.com/phg/">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://alejandrocardozoinstituto.site/phg/">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Otro País 🌏</span>
 					</span>
